test/errors/unknownEnumElement.compopts
--detailed-errors # unknownEnumElement-detailed.good
--no-detailed-errors # unknownEnumElement-brief.good
